create github pages

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="timeline1 cid-rFznVGDtsu mbr-parallax-background" id="timeline1-1f">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="timeline1 cid-rFznVGDtsu mbr-parallax-background" id="timeline1-1f">
 
     
 
@@ -111,7 +111,7 @@
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Started Playing Golf</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            At the age of 7 Sven started playing golf when his brother tagged him along on the golf course. Not long after, he got is first junior golf set. It included just a 3 wood, 7 iron and a putter.</p>
+                            At the age of 7 Sven started playing golf when his older brother tagged him along on the golf course. Not long after, he got is first junior golf set. It included just a 3 wood, 7 iron and a putter.</p>
                     </div>
                 </div>
             </div>
@@ -119,16 +119,15 @@
             <div class="row timeline-element reverse separline">
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">year</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5">1999</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Milestone 3</h4>      
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">National Strokeplay Champion<br></h4>      
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            text</p>
+                            Sven competed in both the National Strokeplay Championship Under 13 in the first week of september and the National Strokeplay Championship Under 14 later that month to win two tournaments in a row at the age of 12.&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -137,15 +136,15 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            year</p>
+                            2000</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Milestone 4</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Junior World Championship<br>San Diego</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            text</p>
+                            Sven ranked 28th on the Junior World Championship in San Diego leaving behind Rory Mcilroy (36th) and Rickie Fowler (78th). </p>
                     </div>
                 </div>
             </div>
@@ -154,16 +153,15 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            year</p>
+                            2005</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Milestone 5</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">National Strokeplay Champion U19</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            text</p>
+                            Sven won the National Strokeplay Championship Under 19.</p>
                     </div>
                 </div>
             </div>
@@ -172,16 +170,14 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            year</p>
+                            2008</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Milestone 6</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            text</p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Van Lanschot Amateur Tour</h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">WInning this tournament with a flawless course record round of 66 was a turning point in Sven's career. He also managed to reach 2nd place at the National Matchplay Championship U22 that same year.</p>
                     </div>
                 </div>
             </div>
@@ -190,16 +186,15 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                           year</p>
+                           2009</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Milestone 7</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Q-School European Tour</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            text</p>
+                            3rd place Qualifying School European Tour on Chart Hills United Kingdom. 3rd place RICOH National Open Professional Tournament.</p>
                     </div>
                 </div>
             </div>
@@ -208,14 +203,13 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                           year</p>
+                           2010</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Milestone 8</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Brabants Open Tournament</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
                         </p>
@@ -227,14 +221,13 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6  align-left">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                           year</p>
+                           2012</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Milestone 9</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">2012 - Winnaar Czech PGA Tour Euled Classic met een 63 (-9) laatste ronde - Winnaar Czech PGA Tour Hant Trophy</h4>
 
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
                             text</p>
