--- a/founding-members-protected.html
+++ b/founding-members-protected.html
@@ -117,7 +117,7 @@
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         <div class="staticrypt-instructions">
-            <p class="staticrypt-title">Protected Page</p>
+            <p class="staticrypt-title">Founding Member Access</p>
             <p></p>
         </div>
 
@@ -130,7 +130,7 @@
                    placeholder="passphrase"
                    autofocus/>
 
-            <input type="submit" class="staticrypt-decrypt-button" value="DECRYPT"/>
+            <input type="submit" class="staticrypt-decrypt-button" value="CONTINUE"/>
         </form>
     </div>
 
