--- a/founding-members-protected.html
+++ b/founding-members-protected.html
@@ -72,10 +72,10 @@
         .staticrypt-body {
             margin-bottom: 1em;
             background: #A4935B; /* fallback for old browsers */
-            background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-            background: -moz-linear-gradient(right, #76b852, #8DC26F);
-            background: -o-linear-gradient(right, #76b852, #8DC26F);
-            background: linear-gradient(to left, #76b852, #8DC26F);
+            background: -webkit-linear-gradient(right, #A4935B, #8DC26F);
+            background: -moz-linear-gradient(right, #A4935B, #8DC26F);
+            background: -o-linear-gradient(right, #A4935B, #8DC26F);
+            background: linear-gradient(to left, #A4935B, #8DC26F);
             font-family: "Arial", sans-serif;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
