create github pages

--- a/about.html
+++ b/about.html
@@ -32,23 +32,23 @@
     </div>
 
     <div class="container align-center">
-        <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><br><br>Timeline</h2>
+        <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><strong><br></strong><br><strong><br>Road to Success</strong><strong><br></strong></h2>
         <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">
-            From digging shallow holes on a campsite lawn as a 7 year old boy, trying to make these impossible putts from dusk till dawn. To the ball striking powerhouse and professional golf athlete of today.<br>Sven's brief history timeline towards making his golfing dream come true.</h3>
+            From digging shallow holes on a campsite lawn as a 7 year old boy, trying to make these impossible putts from dusk till dawn. To the ball striking powerhouse and professional golf athlete he is today.<br>Sven's brief history timeline towards making his golfing dream come true.<br><br><br></h3>
 
         <div class="container timelines-container reverseTimeline" mbri-timelines="">
             <!--1-->
             <div class="row timeline-element reverse">
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
-                        <p class="mbr-timeline-date mbr-fonts-style display-5">July 23, 1987</p>
+                        <p class="mbr-timeline-date mbr-fonts-style display-5">1987</p>
                     </div>
                 </div>
            <span class="iconBackground"></span>
             <div class="col-xs-12 col-md-6 align-right">
                 <div class="timeline-text-content">
                     <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Sven's Birthday</h4>
-                    <p class="mbr-timeline-text mbr-fonts-style display-7">Sven was born in Meppel, The Netherlands.</p>
+                    <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Sven</strong> was born in Meppel, The Netherlands.</p>
                  </div>
             </div>
             </div>
@@ -66,7 +66,7 @@
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Started Playing Golf</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            At the age of 7 Sven started playing golf when his older brother tagged him along on the golf course. Not long after, he got is first junior golf set. It included just a 3 wood, 7 iron and a putter.</p>
+                            At the <strong>age of 7</strong> Sven started playing golf when his older brother tagged him along on the golf course. Not long after, he got is first junior golf set. It included just a 3 wood, 7 iron and a putter.</p>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">National Strokeplay Champion<br></h4>      
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Sven competed in both the National Strokeplay Championship Under 13 in the first week of september and the National Strokeplay Championship Under 14 later that month to win two tournaments in a row at the age of 12.&nbsp;</p>
+                            Sven competed in both the <strong>National Strokeplay Championship Under 13</strong> in the first week of september and the <strong>National Strokeplay Championship Under 14</strong> later that month to <strong>win </strong>two tournaments in a row<strong> at the age of 12</strong>.&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -98,8 +98,8 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Junior World Championship<br>San Diego</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Sven ranked 28th on the Junior World Championship in San Diego leaving behind Rory Mcilroy (36th) and Rickie Fowler (78th). </p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>
+                            Sven ranked 28th</strong> on the Junior World Championship in San Diego leaving behind <strong>Rory Mcilroy (36th)</strong> and <strong>Rickie Fowler (78th)</strong>. </p>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Van Lanschot Amateur Tour</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">WInning this tournament with a flawless course record round of 66 was a turning point in Sven's career. He also managed to reach 2nd place at the National Matchplay Championship U22 that same year.</p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">WInning this tournament with a flawless course record <strong>round of 66</strong> was a turning point in Sven's career. He also managed to reach 2nd place at the <strong>National Matchplay Championship U22</strong> that same year.</p>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Q-School European Tour</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            3rd place Qualifying School European Tour on Chart Hills United Kingdom. 3rd place RICOH National Open Professional Tournament.</p>
+                            3rd place <strong>Qualifying School European Tour</strong> on Chart Hills United Kingdom. 3rd place <strong>RICOH National Open</strong> Professional Tournament.</p>
                     </div>
                 </div>
             </div>
@@ -165,9 +165,7 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Brabants Open Tournament</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">His victory on the <strong>Brabants Open Tournament</strong> in 2010 with a total score of -5 earned Sven a wildcard spot in the <strong>KLM Open European Tour</strong> tournament of that year.</p>
                     </div>
                 </div>
             </div>
@@ -182,10 +180,10 @@
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-right">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">2012 - Winnaar Czech PGA Tour Euled Classic met een 63 (-9) laatste ronde - Winnaar Czech PGA Tour Hant Trophy</h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Czech PGA Tour Euled Classic&nbsp;</h4>
 
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            text</p>
+                            Sven won this prestigious European tournament with a superb and <a href="http://www.czechone.cz/en/news/euled-classic-record-of-the-course-attacked.html" target="_blank">flawless 9-under final round</a> of <strong>63</strong>.</p>
                     </div>
                 </div>
             </div>
@@ -194,17 +192,14 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                        <p class="mbr-timeline-date mbr-fonts-style display-5">
-                          year</p>
+                          2012</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Milestone 10</h4> 
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
-                        </p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Czech PGA Tour Hant Trophy</h4> 
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">2012 marked another year of outstanding results for Sven in the Czech Republic when he won 1st prize in the <a href="http://www.czechone.cz/en/news/hant-trophy-skalica-final-day.html" target="_blank">PGA Hant Trophy</a>.&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -221,7 +216,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">KLM Open</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            At the magnificent International Golf Course in Amsterdam, Sven managed to secure himself a starting position for the weekend at the European Tour KLM Open Tournament after finishing his second round.<br>This was the 5th time that Sven participated at this tournament. Three times as an amateur and twice as a professional golf player.&nbsp;</p>
+                            At the magnificent International Golf Course in Amsterdam, Sven managed to secure himself a starting position for the weekend at the <strong>European Tour KLM Open</strong>&nbsp;tournament after finishing his second round.<br>This was the 5th time that Sven participated at this tournament. Three times as an amateur and twice as a professional golf player.&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -239,7 +234,7 @@
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             European Tour</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Having played golf for as long as he can remember, Sven's next adventure is a European Tour card. To achieve this long lasting dream, his focus will be entirely on playing his best game with pinpoint accuracy on strategically selected tournaments thoughout the upcoming 2020 season.<br>Anticipating to play at the world's biggest golf tournaments and compete against some of the greatest golf players of this era. All that's needed is a laser sharp focus and a little help from his Founding Members...</p>
+                            Having played golf for as long as he can remember, Sven's next adventure is a <strong>European Tour card</strong>. To achieve this long lasting dream, his focus will be entirely on playing his best game with pinpoint accuracy on strategically selected tournaments thoughout the upcoming <strong>2020 season</strong>.<br>Anticipating to play at the world's biggest golf tournaments and compete against some of the greatest golf players of this era. All that's needed is a laser sharp focus and a little help from his <a href="founding-members.html">Founding Members</a>.</p>
                     </div>
                 </div>
             </div>
@@ -247,7 +242,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="menu cid-rFzmbLknWq" once="menu" id="menu1-14">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="menu cid-rFzmbLknWq" once="menu" id="menu1-14">
 
     
 
