--- a/schedule.html
+++ b/schedule.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
 
     
 
