create github pages

--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
 
     
 
@@ -170,7 +170,7 @@
 
             <div class="plan col-12 mx-2 my-2 justify-content-center favorite col-lg-4">
                 <div class="plan-header text-center pt-5">
-                    <h3 class="plan-title mbr-fonts-style display-5">MOST POPULAR</h3>
+                    <h3 class="plan-title mbr-fonts-style display-5"></h3>
                     <div class="plan-price">
                         <span class="price-value mbr-fonts-style display-5"></span>
                         <span class="price-figure mbr-fonts-style display-1">
