--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-rFzsmGGZ59 mbr-parallax-background" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section content5 cid-rFzsmGGZ59 mbr-parallax-background" id="content5-1h">
 
     
 
