--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section content5 cid-rFxOhjPiXn mbr-parallax-background" id="content5-z">
 
     
 
