--- a/page7.html
+++ b/page7.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="header1 cid-rPtSX7YpAG" id="header1-2g">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header1 cid-rPtSX7YpAG" id="header1-2g">
 
     
 
