--- a/schedule.html
+++ b/schedule.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
 
     
 
