create github pages

--- a/schedule.html
+++ b/schedule.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-rN7ytXRDy5" id="header1-27">
 
     
 
@@ -97,7 +97,7 @@
   
   
   <div class="container container-table">
-      
+      <h2 class="mbr-section-title mbr-fonts-style align-center pb-3 display-2">Tournaments</h2>
       <h3 class="mbr-section-subtitle mbr-fonts-style align-center pb-5 mbr-light display-7">
             Below is a list of tournaments that I have selected as my primary milestones this season. This is not an exhaustive list and it is subject to change during my performances as it can vary based on results. Top finishes in qualification rounds can obviously change the planned course, but will ultimately have no effect on the actual end goal. A European Tour card. &nbsp; &nbsp; &nbsp;</h3>
       <div class="table-wrapper">
