--- a/founding-members.html
+++ b/founding-members.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-rPOIP6Bu0Q mbr-parallax-background" id="content5-36">
 
     
 
@@ -231,7 +231,7 @@
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">
-                        Full Brand Exposure</h2>
+                        Full Brand <strong>Exposure</strong></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-7">
                         Make your brand stand out from the crowd! Your company gets all the attention, while I can fully focus on perfecting my golf game. Your company logo will be visible on all apparel, my golf bag, umbrella, website and social media publications.
@@ -259,7 +259,7 @@
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">
-                        Flight Connect</h2>
+                        Flight <strong>Connect</strong></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-7">
                         Boost you client relationship and marketing management efforts with the addition of me as your ultimate team member to your morning or afternoon tee time flight. A unique experience where the striking similarities between playing a round of competitive tournament golf under tremendous pressure and dealing with high profile business decisions in daily corporate lives, will be one of the main take-aways.<br><br>During practicing and playing&nbsp;a 9 or 18-holes round private session I will introduce your business partners to the wonderful world of playing golf at a tour professional level and share key insightful tips &amp; tricks to improve their golf swing. I will take them on a journey of continuous decision making while maintaining a razor-sharp focus&nbsp;and strengthen business relationships in the process.<br></p>
@@ -362,7 +362,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HNR41ctVSGjnTvA/fJw962J78W7ksx/3ml0jMfyjoSMSDpLDhsvAd/ER20CjTr8h3aaCsI6q5ThKWuKmMAurm7qGIzc3pU65VffW6Pec3i0NnuBHlqLxWFyOTTNzvL4w">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mfOKOeatmEBcY7dW3vh/ce8LhGkbeSwf8SwCpbnOqY+0Zp5/nR+F2g354bj17NmXmQkk2+DcjZzRai1Dfji16/155Aq4EPOcjBqAsoqZx4EUOOyloglaclj/NvuWKF6J">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your interest. I will be in touch with you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
