create github pages

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="timeline1 cid-rFznVGDtsu mbr-parallax-background" id="timeline1-1f">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="timeline1 cid-rFznVGDtsu mbr-parallax-background" id="timeline1-1f">
 
     
 
